--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
         <h3>ToDo's</h3>
 
 <ul class="todolist">
-          <li class="list-group-items">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore
-            enim soluta quia beatae mollitia,
-          </li>
-          <li class="list-group-items">
+   <li class="list-group-items">
+           First to do
+          </li>  <li class="list-group-items">
             odit veniam fugiat doloribus omnis maiores nulla, animi sit ducimus
             officiis ratione accusamus quas, reprehenderit autem?
           </li>
@@ -39,7 +37,7 @@
           <li class="list-group-items">
             odit veniam fugiat doloribus omnis maiores nulla, animi sit ducimus
             officiis ratione accusamus quas, reprehenderit autem?
-          </li>
+</li>
         </ul>
       </div>
     </section>
